Fixes the nav on small screens

--- a/css/visuals.css
+++ b/css/visuals.css
@@ -83,7 +83,7 @@ header img {
         position: relative;
     }
     .sidebar_toggled_mobile{
-        height: 253px;
+        height: 280px;
         width: 100%;
     }
 }
